objects/Client_Invoice__c/Client_Invoice__c.object-meta.xml
<CustomObject>
    <description>This is Client Invoice object.</description>
    <label>Client Invoice</label>
    <nameField>
        <label>Invoice #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>