objects/Client_Invoice__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Client Invoices</relationshipLabel>
    <relationshipName>Client_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>