objects/Client_Invoice__c/fields/Cost_Per__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per__c</fullName>
    <formula>Invoice_Total_new__c   /  Total_Allocated_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>