objects/Client_Invoice__c/fields/Dummy_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Date_4__c</fullName>
    <description>This is dummy date field 4. It will be used as a variable field in subscriber org.</description>
    <label>Dummy Date 4</label>
    <type>Date</type>
</CustomField>