objects/Client_Invoice__c/fields/Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total__c</fullName>
    <label>Invoice Total(Tax false)</label>
    <summarizedField>Client_Invoice_Line_Item__c.Billable_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Client_Invoice_Line_Item__c.Tax__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Client_Invoice_Line_Item__c.Client_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>