objects/Client_Invoice__c/fields/Invoice_Total_new__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total_new__c</fullName>
    <formula>Taxable_Total_field__c  +   Invoice_Total__c +  Sales_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>