objects/Client_Invoice__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>