objects/Client_Invoice__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due upon reciept</fullName>
                <default>true</default>
                <label>Due upon reciept</label>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>