objects/Client_Invoice__c/fields/Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation__c</fullName>
    <formula>Total_Produced__c -  Total_Allocated_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reconciliation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>