objects/Client_Invoice__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <formula>Tax_Rate__c  *  Taxable_Total_field__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>