objects/Client_Invoice__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>