objects/Client_Invoice__c/fields/Taxable_Total_field__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Total_field__c</fullName>
    <label>Taxable Total</label>
    <summarizedField>Client_Invoice_Line_Item__c.Billable_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Client_Invoice_Line_Item__c.Tax__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Client_Invoice_Line_Item__c.Client_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>