objects/Client_Invoice__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>