objects/Client_Invoice__c/fields/Total_Allocated_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated_Qty__c</fullName>
    <label>Total Allocated Qty</label>
    <summarizedField>Invoice_Allocation_Line_Item__c.Allocation_Qty__c</summarizedField>
    <summaryForeignKey>Invoice_Allocation_Line_Item__c.Client_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>