objects/Client_Invoice__c/fields/Total_Produced__c.field-meta.xml
<CustomField>
    <fullName>Total_Produced__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Total Produced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>