objects/Client_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Invoice_Total_new__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Job__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>